Add basic support for threading articles

--- a/sass/_colours.scss
+++ b/sass/_colours.scss
@@ -2,6 +2,7 @@ $skeptic: #bfe3d5;
 $nevada: #5c7178;
 $limed_spruce: #33484f;
 $te_papa_green: #1e333a;
+$opal: #acc9c8;
 
 $roti: #bea13e;
 $cognac: #9f481b;
