Add the eye test results I have
I did get earlier tests (in 2010, 2012, & 2014), but they were with
Dollond & Aitchison, which Boots swallowed. And somehow … *somehow* …
my older records were lost.

Since then I ask for a copy of my results after each test.

--- a/sass/_colours.scss
+++ b/sass/_colours.scss
@@ -9,6 +9,9 @@ $cognac: #9f481b;
 $desert_storm: #efeeec;
 $eerie_black: #1e1b1d;
 
+$kimberly: #7373a9;
+$waterloo: #7a7f8f;
+
 $pearly_purple: #bf6b8d;
 $cosmic: #7b3c58;
 
