--- a/sass/pages/_source.scss
+++ b/sass/pages/_source.scss
@@ -75,7 +75,7 @@ body.source.article.thread {
             max-width: 35%;
             height: auto;
             margin: 0 0 20px 20px;
-            outline: 1px solid $eerie_black;
+            outline: 1px solid $body_black;
         }
     }
 }
