--- a/sass/pages/_tweet.scss
+++ b/sass/pages/_tweet.scss
@@ -6,9 +6,9 @@ body.tweet {
     }
 
     main blockquote {
-        border: 1px solid #7a7f8f;
+        border: 1px solid $waterloo;
         border-radius: 15px;
-        color: #7a7f8f;
+        color: $waterloo;
         padding: 10px;
         margin: 10px 5em 10px 1em;
 
