--- a/sass/pieces/_indexes.scss
+++ b/sass/pieces/_indexes.scss
@@ -52,7 +52,7 @@
 
         a {
             position: relative;
-            color: $desert_storm;
+            color: $body_white;
             text-decoration: none;
             display: block;
 
@@ -66,7 +66,7 @@
                 display: block;
                 padding: 2px 5px;
                 background: rgba(0, 0, 0, 0.5);
-                outline: 1px solid $eerie_black;
+                outline: 1px solid $body_black;
                 position: absolute;
                 bottom: 10px;
                 left: 10px;
